# nab-trustx

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
apac-nab/: .gitignore  settings.sh
apac-nab/bin.cdf/: 10.cdf.prepare.sh  10.cdf.prepare2.sh  20.cdf.read-latest-md5.sh  20.cdf.read-latest-md52.sh  30.cdf.update-trustx.sh
apac-nab/bin.cp/: 10.cp.prepare-zip.sh  10.cp.prepare-zip2.sh  10.cp.prepare-zip3.sh  20.cp.read-latest-md5.sh  30.cp.update-trustx.sh  30.cp.update-trustx2.sh
apac-nab/bin.pd/: 10.pd.read-latest.sh  11.pd.copy-from-local.sh  20.pd.extract-cp-versions.sh  25.pd.update-all-cp-versions.sh  30.pd.check-pv.sh  35.pd.check-secrets.sh  40.pd.extract-cf-versions.sh  45.pd.update-all-cf-versions.sh  50.pd.extract-cdf-versions.sh  55.pd.update-all-cdf-versions.sh  70.pd.pick-latest-theme.sh  75.pd.checkParams.sh  80.pd.compare.sh  81.pd.read-md5.sh  90.pd.upload2.sh
apac-nab/bin.pd.not_used/: .gitignore  32.checkPVs.sh  33.checkSecrets.sh  checkCfParams.py
apac-nab/bin.themes/: 00.listThemes.sh  10.theme.read-latest.sh  20.theme.update.sh  _readme.txt
apac-nab/src.cdf/: DLDataConfirmationForm.json  DummyConsentPicture.json  DummyEmailOnly.json  DummyExistingCustomer.json  DummyOTP.json  DummyPassword.json  DummyPin.json  GenericReviewForm.json  InvalidDocumentForm.json  NABPreferredName.json  PassportDataConfirmationForm.json  PhoneNumberForm.json  ProcessingForm2.json  SergeiProgress.json
apac-nab/src.cp.old/: BirthCertificateForm.html  ChangeOfName.html  (+36 more)
tests/: test_cli.py
trustx/: __init__.py  cli.py  logger.py
(+114 files in other folders)
